--- a/CorinthiansBackend/Web.config
+++ b/CorinthiansBackend/Web.config
@@ -5,7 +5,7 @@
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="backendDb" connectionString="Server=tcp:corinthians.database.windows.net,1433;Initial Catalog=backenddb;Persist Security Info=False;User ID=alessandrom;Password=P@ssw0rd1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
+    <add name="backendDb" connectionString="Server=tcp:corinthians.database.windows.net,1433;Initial Catalog=backenddb;Persist Security Info=False;User ID=alessandrom;Password=xxx;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
