--- a/TicketsCorinthiansCore/appsettings.json
+++ b/TicketsCorinthiansCore/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TicketsDb": "Server=tcp:corinthians.database.windows.net,1433;Initial Catalog=gamesdb;Persist Security Info=False;User ID=alessandrom;Password=P@ssw0rd1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "TicketsDb": "Server=tcp:corinthians.database.windows.net,1433;Initial Catalog=gamesdb;Persist Security Info=False;User ID=alessandrom;Password=xxx;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
